--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -7,14 +7,14 @@
   position: absolute;
   bottom:0;
   height:fit-content;
-  width: 100%;
-
+  width:fit-content;
+  left: 42.00%;
   display:flex;
   flex-direction: row;
 }
 .tag-brand > div:nth-child(n) {
   display:flex;
-  width: 100%;
+  width: 360px;
   
 }
 .tag-brand > div:nth-child(n) h3 {
@@ -28,11 +28,46 @@
 
 
 .img-slider {
-  display:flex;
-  height: 90vh;
-}
 
+  height: 100vh;
+
+  position: relative;
+  overflow: hidden;
+}
+#img-ww {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+ 
+}
 
 .img-slider img {
   margin: auto;
+  width: 900px;
+  height:auto;
+  margin-top:100px;
 }
+
+
+.nav-slider {
+  position: absolute;
+    top: 120px;
+    z-index: 99;
+  width: 200px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-xkaojf {
+  font-size: 30px;
+  line-height: 100%;
+
+  cursor: pointer;
+  width: 150px;
+  height: 40px;
+  border: 1px solid;
+  background-color: rgb(154, 158, 158);
+  color:white;
+}
+
